--- a/src/footer/footer.tpl.html
+++ b/src/footer/footer.tpl.html
@@ -1,10 +1,9 @@
 <footer class="footer">
   <div class="container">
-    <p ng-show="footer.blobSupport && footer.win10">
+    <p ng-show="footer.blobSupport && footer.win10 && !footer.win10Hide">
       <b>Want to handle magnet URI?</b> Fix Windows 10 magnet URI handling <a ng-href="{{ footer.regeditURL }}" target="_blank" download="magnet.reg">with this reg file</a>
+      <button class="btn btn-sm btn-default" ng-click="footer.hideWin10()">hide</button>
     </p>
-  </div>
-  <div class="container">
     <p class="text-muted">version: <a ng-href="https://github.com/colthreepv/alldebrid/commit/{{ footer.version }}">{{ footer.version }}</a></p>
   </div>
 </footer>
