--- a/src/navbar/logged.tpl.html
+++ b/src/navbar/logged.tpl.html
@@ -14,8 +14,15 @@
   <form name="addMagnet" ng-submit="navbar.addMagnet()">
     <div class="collapse navbar-collapse" ng-class="!navbar.collapsed && 'in'">
       <div class="pull-right">
-        <button type="button" class="btn btn-default navbar-btn" ng-click="navbar.showMagnet = !navbar.showMagnet" ng-show="navbar.newMagnet.length === 0">New</button>
-        <button type="submit" class="btn btn-warning navbar-btn" ng-show="navbar.newMagnet.length > 0">Add</button>
+        <button type="button" class="btn btn-default navbar-btn"
+          ng-click="navbar.showMagnet = !navbar.showMagnet"
+          ng-show="navbar.newMagnet.length === 0">New</button>
+        <button type="button" class="btn btn-default navbar-btn"
+          ng-click="navbar.showMagnet = !navbar.showMagnet"
+          ng-show="navbar.showMagnet && navbar.newMagnet.length === 0">Close</button>
+        <button type="submit" class="btn btn-warning navbar-btn"
+          ng-show="navbar.newMagnet.length > 0">Add</button>
+
         <span class="navbar-brand">
           <span class="glyphicon glyphicon-user"></span>
           <span class="right-spacer">{{ navbar.user.username }}</span>
