completely thrown away all the React things, and start over with angular 1.x

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html ng-app="main" lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +13,6 @@
 <body>
   <div id="container"></div>
   <script src="/build/libs.js"></script>
-  <script src="/build/bundle.js"></script>
+  <script src="/build/main.js"></script>
 </body>
 </html>
