--- a/client/login/index.html
+++ b/client/login/index.html
@@ -5,6 +5,7 @@
         <strong>Alldebrid Login</strong>
       </div>
       <div class="panel-body">
+
         <form role="form" name="$ctrl.form" ng-submit="$ctrl.tryLogin($ctrl.form)" novalidate>
           <fieldset>
             <div class="row">
@@ -12,10 +13,28 @@
                 <img class="profile-img" src="//cdn.alldebrid.com/lib/images/default/logo_alldebrid.png">
               </div>
             </div>
+
             <div class="row">
               <div class="col-sm-12 col-md-10  col-md-offset-1">
-                <formly-form model="$ctrl.loginData" fields="$ctrl.fields" form="$ctrl.form">
+                <formly-form model="$ctrl.loginData" fields="$ctrl.loginFields" form="$ctrl.form">
                   <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.loading">Log In</button>
+                  <button class="btn btn-lg btn-primary" ng-show="$ctrl.loading">
+                    <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
+                  </button>
+                </formly-form>
+              </div>
+            </div>
+
+
+          </fieldset>
+        </form>
+
+        <form role="form" name="$ctrl.unlockForm" ng-submit="$ctrl.tryUnlock($ctrl.unlockForm)" novalidate>
+          <fieldset>
+            <div class="row">
+              <div class="col-sm-12 col-md-10  col-md-offset-1">
+                <formly-form model="$ctrl.unlockData" fields="$ctrl.unlockFields" form="$ctrl.unlockForm" ng-show="$ctrl.unlockToken">
+                  <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.loading">Unlock</button>
                   <button class="btn btn-lg btn-primary" ng-show="$ctrl.loading">
                     <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
                   </button>
@@ -24,6 +43,7 @@
             </div>
           </fieldset>
         </form>
+
       </div>
       <div class="panel-footer">
         Don't have an account? <a href="https://www.alldebrid.com/register/" target="_blank">Register on AllDebrid</a>
