--- a/client/main/states/torrents/index.html
+++ b/client/main/states/torrents/index.html
@@ -5,97 +5,97 @@
         <div class="row">
           <div class="btn-group btn-group-justified" role="group" aria-label="...">
             <div class="btn-group">
-              <button class="btn btn-md btn-danger" ng-disabled="!torrent.checked.length || torrent.removing" ng-click="torrent.removeChecked()">
-                remove <span class="glyphicon glyphicon-refresh glyphicon-spin" ng-show="torrent.removing"></span>
+              <button class="btn btn-md btn-danger" ng-disabled="!$ctrl.checked.length || $ctrl.removing" ng-click="$ctrl.removeChecked()">
+                remove <span class="glyphicon glyphicon-refresh glyphicon-spin" ng-show="$ctrl.removing"></span>
               </button>
             </div>
             <div class="btn-group">
-              <button class="btn btn-md btn-info" ng-disabled="!torrent.checked.length" ng-click="torrent.generateLinks()">get links</button>
+              <button class="btn btn-md btn-info" ng-disabled="!$ctrl.checked.length" ng-click="$ctrl.generateLinks()">get links</button>
             </div>
             <div class="btn-group">
-              <button class="btn btn-md btn-default" ng-disabled="!torrent.checked.length" ng-click="torrent.deselect()">deselect</button>
+              <button class="btn btn-md btn-default" ng-disabled="!$ctrl.checked.length" ng-click="$ctrl.deselect()">deselect</button>
             </div>
             <div class="btn-group">
-              <a class="btn btn-md btn-link disabled" ng-show="torrent.db.length">{{ torrent.db.length }} torrents</a>
+              <a class="btn btn-md btn-link disabled" ng-show="$ctrl.db.length">{{ $ctrl.db.length }} torrents</a>
             </div>
           </div>
         </div>
       </form>
     </div>
   </div>
-  <div class="row" ng-show="torrent.db.length">
+  <div class="row" ng-if="$ctrl.db.length">
     <table class="table torrents">
       <thead>
         <tr>
-          <th class="select"><input type="checkbox" ng-click="torrent.select()" ng-model="torrent.selectAll"></th>
+          <th class="select"><input type="checkbox" ng-click="$ctrl.select()" ng-model="$ctrl.selectAll"></th>
           <th class="id">
             <a class="pointer"
-            ng-class="{ 'ordered': torrent.orderByField === 'id'}" ng-click="torrent.orderBy('id')">
+            ng-class="{ 'ordered': $ctrl.orderByField === 'id'}" ng-click="$ctrl.orderBy('id')">
             ID <span class="glyphicon"
-                ng-class="{ 'glyphicon-chevron-down': torrent.orderReversed, 'glyphicon-chevron-up': !torrent.orderReversed }"
-                ng-show="torrent.orderByField === 'id'"></span>
+                ng-class="{ 'glyphicon-chevron-down': $ctrl.orderReversed, 'glyphicon-chevron-up': !$ctrl.orderReversed }"
+                ng-show="$ctrl.orderByField === 'id'"></span>
             </a>
           </th>
           <th class="server">
             <a class="pointer"
-            ng-class="{ 'ordered': torrent.orderByField === 'server'}" ng-click="torrent.orderBy('server')">
+            ng-class="{ 'ordered': $ctrl.orderByField === 'server'}" ng-click="$ctrl.orderBy('server')">
             server <span class="glyphicon"
-                ng-class="{ 'glyphicon-chevron-down': torrent.orderReversed, 'glyphicon-chevron-up': !torrent.orderReversed }"
-                ng-show="torrent.orderByField === 'server'"></span>
+                ng-class="{ 'glyphicon-chevron-down': $ctrl.orderReversed, 'glyphicon-chevron-up': !$ctrl.orderReversed }"
+                ng-show="$ctrl.orderByField === 'server'"></span>
             </a>
           </th>
           <th class="name">
             <a class="pointer"
-            ng-class="{ 'ordered': torrent.orderByField === 'name'}" ng-click="torrent.orderBy('name')">
+            ng-class="{ 'ordered': $ctrl.orderByField === 'name'}" ng-click="$ctrl.orderBy('name')">
             Filename <span class="glyphicon"
-                ng-class="{ 'glyphicon-chevron-down': torrent.orderReversed, 'glyphicon-chevron-up': !torrent.orderReversed }"
-                ng-show="torrent.orderByField === 'name'"></span>
+                ng-class="{ 'glyphicon-chevron-down': $ctrl.orderReversed, 'glyphicon-chevron-up': !$ctrl.orderReversed }"
+                ng-show="$ctrl.orderByField === 'name'"></span>
             </a>
           </th>
           <th class="status">
             <a class="pointer"
-            ng-class="{ 'ordered': torrent.orderByField === 'status'}" ng-click="torrent.orderBy('status')">
+            ng-class="{ 'ordered': $ctrl.orderByField === 'status'}" ng-click="$ctrl.orderBy('status')">
             status <span class="glyphicon"
-                ng-class="{ 'glyphicon-chevron-down': torrent.orderReversed, 'glyphicon-chevron-up': !torrent.orderReversed }"
-                ng-show="torrent.orderByField === 'status'"></span>
+                ng-class="{ 'glyphicon-chevron-down': $ctrl.orderReversed, 'glyphicon-chevron-up': !$ctrl.orderReversed }"
+                ng-show="$ctrl.orderByField === 'status'"></span>
             </a>
           </th>
           <th class="size">
             <a class="pointer"
-            ng-class="{ 'ordered': torrent.orderByField === 'size'}" ng-click="torrent.orderBy('size')">
+            ng-class="{ 'ordered': $ctrl.orderByField === 'size'}" ng-click="$ctrl.orderBy('size')">
             size <span class="glyphicon"
-                ng-class="{ 'glyphicon-chevron-down': torrent.orderReversed, 'glyphicon-chevron-up': !torrent.orderReversed }"
-                ng-show="torrent.orderByField === 'size'"></span>
+                ng-class="{ 'glyphicon-chevron-down': $ctrl.orderReversed, 'glyphicon-chevron-up': !$ctrl.orderReversed }"
+                ng-show="$ctrl.orderByField === 'size'"></span>
             </a>
           </th>
           <th class="seeders">
             <a class="pointer"
-            ng-class="{ 'ordered': torrent.orderByField === 'seeders'}" ng-click="torrent.orderBy('seeders')">
+            ng-class="{ 'ordered': $ctrl.orderByField === 'seeders'}" ng-click="$ctrl.orderBy('seeders')">
             seeders <span class="glyphicon"
-                ng-class="{ 'glyphicon-chevron-down': torrent.orderReversed, 'glyphicon-chevron-up': !torrent.orderReversed }"
-                ng-show="torrent.orderByField === 'seeders'"></span>
+                ng-class="{ 'glyphicon-chevron-down': $ctrl.orderReversed, 'glyphicon-chevron-up': !$ctrl.orderReversed }"
+                ng-show="$ctrl.orderByField === 'seeders'"></span>
             </a>
           </th>
           <th class="speed">
             <a class="pointer"
-            ng-class="{ 'ordered': torrent.orderByField === 'speed'}" ng-click="torrent.orderBy('speed')">
+            ng-class="{ 'ordered': $ctrl.orderByField === 'speed'}" ng-click="$ctrl.orderBy('speed')">
             speed <span class="glyphicon"
-                ng-class="{ 'glyphicon-chevron-down': torrent.orderReversed, 'glyphicon-chevron-up': !torrent.orderReversed }"
-                ng-show="torrent.orderByField === 'speed'"></span>
+                ng-class="{ 'glyphicon-chevron-down': $ctrl.orderReversed, 'glyphicon-chevron-up': !$ctrl.orderReversed }"
+                ng-show="$ctrl.orderByField === 'speed'"></span>
             </a>
           </th>
           <th class="added_date">
             <a class="pointer"
-            ng-class="{ 'ordered': torrent.orderByField === 'added_date'}" ng-click="torrent.orderBy('added_date')">
+            ng-class="{ 'ordered': $ctrl.orderByField === 'added_date'}" ng-click="$ctrl.orderBy('added_date')">
             date <span class="glyphicon"
-                ng-class="{ 'glyphicon-chevron-down': torrent.orderReversed, 'glyphicon-chevron-up': !torrent.orderReversed }"
-                ng-show="torrent.orderByField === 'added_date'"></span>
+                ng-class="{ 'glyphicon-chevron-down': $ctrl.orderReversed, 'glyphicon-chevron-up': !$ctrl.orderReversed }"
+                ng-show="$ctrl.orderByField === 'added_date'"></span>
             </a>
           </th>
         </tr>
       </thead>
       <tbody>
-        <tr class="pointer" ng-repeat="t in torrent.db | orderBy:torrent.orderByField:torrent.orderReversed" ng-class="{ 'warning': t.checked }" ng-click="torrent.check(t)">
+        <tr class="pointer" ng-repeat="t in $ctrl.db | orderBy:$ctrl.orderByField:$ctrl.orderReversed" ng-class="{ 'warning': t.checked }" ng-click="$ctrl.check(t)">
           <td class="select"><input type="checkbox" ng-model="t.checked"></td>
           <td class="id">{{ t.id }}</td>
           <td class="server">{{ t.server }}</td>
@@ -109,7 +109,7 @@
       </tbody>
     </table>
   </div>
-  <div class="row" ng-show="!torrent.db.length">
+  <div class="row" ng-if="!$ctrl.db.length">
     <div class="col-md-12 well-sm">
       <div class="jumbotron">
         <h1>No torrents detected</h1>
