client digests chunked API responses thanks to jsonpipe

--- a/client/main/states/torrents/index.html
+++ b/client/main/states/torrents/index.html
@@ -1,5 +1,9 @@
 <div>
   <div class="row">
+    <button type="button" class="btn btn-md btn-default"
+    ng-click="$ctrl.stream()">Stream Torrents</button>
+  </div>
+  <div class="row">
     <div class="col-xs-12">
       <form class="form-inline">
         <div class="row">
