--- a/client/login/index.html
+++ b/client/login/index.html
@@ -16,15 +16,37 @@
 
             <div class="row">
               <div class="col-sm-12 col-md-10  col-md-offset-1">
-                <formly-form model="$ctrl.loginData" fields="$ctrl.loginFields" form="$ctrl.form">
-                  <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.loading">Log In</button>
-                  <button class="btn btn-lg btn-primary" ng-show="$ctrl.loading">
-                    <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
-                  </button>
-                </formly-form>
+
+                <div class="form-input input-group">
+                  <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-user"></span>
+                  </span>
+                  <input type="text" name="username" class="form-control" placeholder="username"
+                    ng-model="$ctrl.lgn.username" required autofocus>
+                </div>
+                <br>
+                <div class="form-input input-group">
+                  <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-lock"></span>
+                  </span>
+                  <input type="password" name="password" class="form-control" placeholder="password"
+                    ng-model="$ctrl.lgn.password" required>
+                </div>
+
+
+                <!-- <formly-form model="$ctrl.loginData" fields="$ctrl.loginFields" form="$ctrl.form"></formly-form> -->
+              </div>
+
+            </div>
+            <br>
+            <div class="row">
+              <div class="text-center">
+                <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.loading">Log In</button>
+                <button class="btn btn-lg btn-primary" ng-show="$ctrl.loading">
+                  <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
+                </button>
               </div>
             </div>
-
 
           </fieldset>
         </form>
