--- a/client/login/index.html
+++ b/client/login/index.html
@@ -6,7 +6,8 @@
       </div>
       <div class="panel-body">
 
-        <form role="form" name="$ctrl.form" ng-submit="$ctrl.tryLogin($ctrl.form)" novalidate>
+        <form role="form" name="$ctrl.lgnForm" ng-submit="$ctrl.tryLogin($ctrl.lgnForm)" novalidate
+          form-api="$ctrl.lgnMore.promise">
           <fieldset>
             <div class="row">
               <div class="center-block">
@@ -24,6 +25,7 @@
                   <input type="text" name="username" class="form-control" placeholder="username"
                     ng-model="$ctrl.lgn.username" required autofocus>
                 </div>
+
                 <br>
                 <div class="form-input input-group">
                   <span class="input-group-addon">
@@ -33,16 +35,20 @@
                     ng-model="$ctrl.lgn.password" required>
                 </div>
 
+              </div>
+            </div>
 
-                <!-- <formly-form model="$ctrl.loginData" fields="$ctrl.loginFields" form="$ctrl.form"></formly-form> -->
+            <br>
+              <div class="form-errors" ng-messages="$ctrl.lgnForm.$submitted && $ctrl.lgnForm.$api.$error">
+                  <small class="error" ng-message="invalidPassword">user/pass combination doesn't match</small>
+                  <small class="error" ng-message="unexpectedError">Unexpected API Error ☹</small>
               </div>
 
-            </div>
             <br>
             <div class="row">
               <div class="text-center">
-                <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.loading">Log In</button>
-                <button class="btn btn-lg btn-primary" ng-show="$ctrl.loading">
+                <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.lgnMore.loading">Log In</button>
+                <button class="btn btn-lg btn-primary" ng-show="$ctrl.lgnMore.loading">
                   <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
                 </button>
               </div>
@@ -56,8 +62,8 @@
             <div class="row">
               <div class="col-sm-12 col-md-10  col-md-offset-1">
                 <formly-form model="$ctrl.unlockData" fields="$ctrl.unlockFields" form="$ctrl.unlockForm" ng-show="$ctrl.unlockToken">
-                  <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.loading">Unlock</button>
-                  <button class="btn btn-lg btn-primary" ng-show="$ctrl.loading">
+                  <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.lgnMore.loading">Unlock</button>
+                  <button class="btn btn-lg btn-primary" ng-show="$ctrl.lgnMore.loading">
                     <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
                   </button>
                 </formly-form>
