--- a/client/login/index.html
+++ b/client/login/index.html
@@ -35,6 +35,17 @@
                     ng-model="$ctrl.lgn.password" required>
                 </div>
 
+                <div ng-if="$ctrl.lgnMore.unlock">
+                  <br>
+                  <div class="form-input input-group">
+                    <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-lock"></span>
+                    </span>
+                    <input type="text" name="unlockCode" class="form-control" placeholder="unlock code"
+                      ng-model="$ctrl.lgnMore.unlockCode" required>
+                  </div>
+                </div>
+
               </div>
             </div>
 
@@ -54,21 +65,6 @@
               </div>
             </div>
 
-          </fieldset>
-        </form>
-
-        <form role="form" name="$ctrl.unlockForm" ng-submit="$ctrl.tryUnlock($ctrl.unlockForm)" novalidate>
-          <fieldset>
-            <div class="row">
-              <div class="col-sm-12 col-md-10  col-md-offset-1">
-                <formly-form model="$ctrl.unlockData" fields="$ctrl.unlockFields" form="$ctrl.unlockForm" ng-show="$ctrl.unlockToken">
-                  <button type="submit" class="btn btn-lg btn-primary" ng-disabled="$ctrl.lgnMore.loading">Unlock</button>
-                  <button class="btn btn-lg btn-primary" ng-show="$ctrl.lgnMore.loading">
-                    <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
-                  </button>
-                </formly-form>
-              </div>
-            </div>
           </fieldset>
         </form>
 
