CSS gets aggregated in common chunks, similar to js. Templating changes reflect this
Minor graphic bugfix, more will come now that CSS is splittable correctly

--- a/client/main/states/unrestrict/index.html
+++ b/client/main/states/unrestrict/index.html
@@ -31,7 +31,8 @@
         </ul>
       </div>
       <div ng-show="$ctrl.textMode()">
-        <textarea class="form-control long-text" placeholder="unrestricted links" rows="{{ $ctrl.unrestricted.length + 2 }}" autofocus ng-model="$ctrl.unrestrictedText"></textarea>
+        <textarea class="form-control long-text download-area" placeholder="unrestricted links" autofocus
+          ng-attr-rows="{{ $ctrl.unrestricted.length + 2 }}" ng-model="$ctrl.unrestrictedText"></textarea>
       </div>
       <button class="btn btn-lg btn-danger" ng-click="$ctrl.done()" ng-disabled="$ctrl.working">
         Done <span class="glyphicon glyphicon-ok"></span>
